# NextStudio

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Delay.md  GEMINI.md  LICENCE.md  LICENSE  NextGui1.jucer  README.md  SimpleSynth.md  build.sh  build_flatpak.sh  com.nextstudio.NextStudio.desktop  com.nextstudio.NextStudio.json  fetch_submodules.bat  fetch_submodules.sh  gen_clangd.sh  nextgui.code-workspace  package_win.sh  start.sh
App/: CMakeLists.txt
App/Source/: ApplicationViewState.h  ArrangerComponent.cpp  ArrangerComponent.h  AudioClipComponent.cpp  AudioClipComponent.h  AudioMidiSettings.cpp  AudioMidiSettings.h  AutomatableSliderComponent.cpp  AutomatableSliderComponent.h  AutomationLaneComponent.cpp  AutomationLaneComponent.h  Browser_Base.cpp  Browser_Base.h  ClipComponent.cpp  ClipComponent.h  DrumPadComponent.cpp  DrumPadComponent.h  DrumSamplerView.cpp  DrumSamplerView.h  EditComponent.cpp  EditComponent.h  EditViewState.cpp  EditViewState.h  ExtendedUIBehavior.h  FileBrowser.cpp  FileBrowser.h  FourOscPluginComponent.cpp  FourOscPluginComponent.h  HeaderComponent.cpp  HeaderComponent.h  InstrumentEffectChooser.cpp  InstrumentEffectChooser.h  KeyboardView.cpp  KeyboardView.h  LassoSelectionTool.cpp  LassoSelectionTool.h  LevelMeterComponent.cpp  LevelMeterComponent.h  LowerRangeComponent.cpp  LowerRangeComponent.h  (+121 more)
App/Source/Components/: AutomatableComboBox.cpp  AutomatableComboBox.h  AutomatableEnvelopeParameter.cpp  AutomatableEnvelopeParameter.h  AutomatableParameter.cpp  AutomatableParameter.h  AutomatableSlider.cpp  AutomatableSlider.h  AutomatableToggle.cpp  AutomatableToggle.h  NonAutomatableParameter.cpp  NonAutomatableParameter.h
App/Source/LowerRange/: LowerRangeComponent.cpp  LowerRangeComponent.h  LowerRangeTabBar.cpp  LowerRangeTabBar.h
App/Source/LowerRange/Mixer/: MixerChannelStripComponent.cpp  MixerChannelStripComponent.h  MixerComponent.cpp  MixerComponent.h
App/Source/LowerRange/PianoRoll/: KeyboardView.cpp  KeyboardView.h  MidiViewport.cpp  MidiViewport.h  PianoRollEditor.cpp  PianoRollEditor.h  VelocityEditor.cpp  VelocityEditor.h
App/Source/LowerRange/PluginChain/: ModifierViewComponent.cpp  ModifierViewComponent.h  PluginChainItemView.cpp  PluginChainItemView.h  PluginChainView.cpp  PluginChainView.h  PluginPresetInterface.h  PluginViewComponent.cpp  PluginViewComponent.h  PresetHelpers.cpp  PresetHelpers.h  PresetManagerComponent.cpp  PresetManagerComponent.h  RackItemView.cpp  RackItemView.h  RackView.cpp  RackView.h  TrackPresetAdapter.h
App/Source/Plugins/: PluginComponent.cpp  PluginComponent.h
App/Source/Plugins/Arpeggiator/: ArpeggiatorPlugin.cpp  ArpeggiatorPlugin.h  ArpeggiatorPluginComponent.cpp  ArpeggiatorPluginComponent.h
App/Source/Plugins/Chorus/: ChorusPluginComponent.cpp  ChorusPluginComponent.h  NextChorusPlugin.cpp  NextChorusPlugin.h
App/Source/Plugins/Compressor/: CompressorPluginComponent.cpp  CompressorPluginComponent.h
App/Source/Plugins/Delay/: DelayPluginComponent.cpp  DelayPluginComponent.h  NextDelayPlugin.cpp  NextDelayPlugin.h
App/Source/Plugins/DrumSampler/: DrumPadComponent.cpp  DrumPadComponent.h  DrumSamplerView.cpp  DrumSamplerView.h  SoundEditorPanel.cpp  SoundEditorPanel.h
App/Source/Plugins/EQ/: EqPluginComponent.cpp  EqPluginComponent.h
App/Source/Plugins/Filter/: FilterPluginComponent.cpp  FilterPluginComponent.h  NextFilterPlugin.cpp  NextFilterPlugin.h
App/Source/Plugins/FourOscPlugin/: FourOscPluginComponent.cpp  FourOscPluginComponent.h
App/Source/Plugins/PeakLimiter/: PeakLimiterPlugin.cpp  PeakLimiterPlugin.h  PeakLimiterPluginComponent.cpp  PeakLimiterPluginComponent.h  USER_MANUAL.md
App/Source/Plugins/Phaser/: NextPhaserPlugin.cpp  NextPhaserPlugin.h  PhaserPluginComponent.cpp  PhaserPluginComponent.h
App/Source/Plugins/Reverb/: ReverbPluginComponent.cpp  ReverbPluginComponent.h
App/Source/Plugins/Saturation/: NextSaturationPlugin.cpp  NextSaturationPlugin.h  (+2 more)
App/Source/SideBrowser/: AudioMidiSettings.cpp  AudioMidiSettings.h  Browser_Base.cpp  Browser_Base.h  FileBrowser.cpp  FileBrowser.h  InstrumentEffectChooser.cpp  InstrumentEffectChooser.h  PluginBrowser.cpp  PluginBrowser.h  ProjectsBrowser.cpp  ProjectsBrowser.h  RenderDialog.h  SampleBrowser.cpp  SampleBrowser.h  SearchFieldComponent.cpp  SearchFieldComponent.h  SidebarComponent.cpp  SidebarComponent.h  SidebarMenu.cpp  SidebarMenu.h
App/Source/SongEditor/: AutomationLaneComponent.cpp  AutomationLaneComponent.h  EditComponent.cpp  EditComponent.h  PlayHeadComponent.cpp  PlayHeadComponent.h  RecordingClipComponent.cpp  RecordingClipComponent.h  SongEditorView.cpp  SongEditorView.h  Thumbnail.cpp  Thumbnail.h  TimeLineComponent.cpp  TimeLineComponent.h  TimelineOverlayComponent.cpp  TimelineOverlayComponent.h  TrackHeadComponent.cpp  TrackHeadComponent.h  TrackLaneComponent.cpp  TrackLaneComponent.h  TrackListView.cpp  TrackListView.h
App/Source/Tools/: ToolFactory.cpp  ToolStrategy.h
App/Source/UI/: HeaderComponent.cpp  HeaderComponent.h  LevelMeterComponent.cpp  LevelMeterComponent.h  MenuBar.cpp  MenuBar.h  ModifierDetailPanel.cpp  ModifierDetailPanel.h  ModifierSidebar.cpp  ModifierSidebar.h  MouseEventThrottler.h  PluginInsertFeedback.h  PluginMenu.cpp  PluginScanner.cpp  PluginScanner.h  PluginWindow.cpp  PluginWindow.h  PositionDisplayComponent.cpp  PositionDisplayComponent.h  PreviewComponent.cpp  PreviewComponent.h  SampleDisplay.cpp  SetupWizard.cpp  SetupWizard.h  SplitterComponent.cpp  SplitterComponent.h
App/Source/Utilities/: ApplicationViewState.h  DragState.h  EditViewState.cpp  EditViewState.h  ExtendedUIBehavior.h  NextLookAndFeel.h  ScopedSaveLock.h  ThumbNailManager.cpp  ThumbNailManager.h  TimeUtils.h  TrackHeightManager.cpp  TrackHeightManager.h  Utilities.cpp  Utilities.h
App/Source/tools/: DrawTool.cpp  DrawTool.h  EraserTool.cpp  EraserTool.h  KnifeTool.cpp  KnifeTool.h  LassoTool.cpp  LassoTool.h  PointerTool.cpp  PointerTool.h  RangeTool.cpp  RangeTool.h
App/resources/: CMakeLists.txt  NextIcons.afdesign  shiftCursorLeftEdge.afdesign
(+78 files in other folders)
